# rusticlone

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: from_commit_to_build_test.yml  from_tag_to_build_release_pypi.yml
example/rclone/: rclone.conf
example/rustic/: Documents.toml  Media.toml  Pictures.toml  common.toml
example/systemd/: rusticlone.service  rusticlone.timer
rusticlone/: cli.py
rusticlone/helpers/: action.py  custom.py  formatting.py  notification.py  rclone.py  requirements.py  rustic.py  timer.py
rusticlone/processing/: atomic.py  parallel.py  profile.py  sequential.py
tests/: tests.sh
